# Moonlight

./: .env.local  .gitignore  README.md  docker-compose.yml  start.sh
.github/: CONTRIBUTING.md  PRIVACY.md
.github/ISSUE_TEMPLATE/: bug_form.yaml  feature_request.yaml
.github/PULL_REQUEST_TEMPLATE/: pull_request.md
Launcher/: README.md  SwordieLauncher.sln
Launcher/v214/: Form1.Designer.cs  Form1.cs  Form1.resx  Form2.Designer.cs  Form2.cs  Launcher.csproj  Program.cs
Server/: Dockerfile  config.properties  docker-entrypoint.sh  init_database.sh  pom.xml
Server/properties/: CP_207-1.properties  LP_207-1.properties
Server/resources/: Data2.wz  shops.sw
Server/sql/: 06_beautyalbum.sql
auth_hook/: AuthHook.sln  README.md  ijl15.exp  ijl15.lib
auth_hook/Client210/: CWvsContext.h  Client210.vcxproj  Client210.vcxproj.filters  Discord.c  Discord.h  EntryPoint.cpp  Functions.cpp  Global.h  MapleHook.cpp  MapleType.h  NMCOHook.cpp  SockHook.cpp  WinHook.cpp  detours.lib  discord_game_sdk.h  discord_rpc.cpp  discord_rpc.h
auth_hook/discord-rpc-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  DiscordRPC.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
auth_hook/lib/: discord-rpc.lib
launcher/: SwordieLauncher.sln
launcher/v214/: Form1.Designer.cs  Form1.cs  Form1.resx  Form2.Designer.cs  Launcher.csproj
redirector/: README.md
redirector/src/: .gitignore  CMakeLists.txt  mushroom_redirector.cpp  trampoline.c
server/: .gitignore  README.md  init_database.sh
(+3385 files in other folders)
